[gd_scene load_steps=3 format=2]

[ext_resource path="res://turno.gd" type="Script" id=1]
[ext_resource path="res://assets/tablero.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 1.0
margin_right = 521.0
margin_bottom = 455.0
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="NinePatchRect"]
margin_left = 10.0
margin_top = 11.0
margin_right = 49.0
margin_bottom = 44.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button2" type="Button" parent="NinePatchRect"]
margin_left = 188.0
margin_top = 10.0
margin_right = 227.0
margin_bottom = 43.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button3" type="Button" parent="NinePatchRect"]
margin_left = 354.0
margin_top = 14.0
margin_right = 393.0
margin_bottom = 47.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button4" type="Button" parent="NinePatchRect"]
margin_left = 6.0
margin_top = 161.0
margin_right = 45.0
margin_bottom = 194.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button5" type="Button" parent="NinePatchRect"]
margin_left = 181.0
margin_top = 159.0
margin_right = 220.0
margin_bottom = 192.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button6" type="Button" parent="NinePatchRect"]
margin_left = 356.0
margin_top = 157.0
margin_right = 395.0
margin_bottom = 190.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button7" type="Button" parent="NinePatchRect"]
margin_left = 10.0
margin_top = 313.0
margin_right = 49.0
margin_bottom = 346.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button8" type="Button" parent="NinePatchRect"]
margin_left = 183.0
margin_top = 310.0
margin_right = 222.0
margin_bottom = 343.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Button9" type="Button" parent="NinePatchRect"]
margin_left = 354.0
margin_top = 311.0
margin_right = 393.0
margin_bottom = 344.0
rect_scale = Vector2( 4, 4 )
flat = true

[node name="Label" type="Label" parent="NinePatchRect"]
margin_left = 580.0
margin_top = 21.0
margin_right = 865.0
margin_bottom = 158.0
script = ExtResource( 1 )

[node name="restart" type="Button" parent="NinePatchRect"]
margin_left = 592.0
margin_top = 173.0
margin_right = 846.0
margin_bottom = 244.0
text = "Reiniciar"

[connection signal="button_up" from="NinePatchRect/Button" to="NinePatchRect/Label" method="_on_Button_button_up"]
[connection signal="button_up" from="NinePatchRect/Button2" to="NinePatchRect/Label" method="_on_Button2_button_up"]
[connection signal="button_up" from="NinePatchRect/Button3" to="NinePatchRect/Label" method="_on_Button3_button_up"]
[connection signal="button_up" from="NinePatchRect/Button4" to="NinePatchRect/Label" method="_on_Button4_button_up"]
[connection signal="button_up" from="NinePatchRect/Button5" to="NinePatchRect/Label" method="_on_Button5_button_up"]
[connection signal="button_up" from="NinePatchRect/Button6" to="NinePatchRect/Label" method="_on_Button6_button_up"]
[connection signal="button_up" from="NinePatchRect/Button7" to="NinePatchRect/Label" method="_on_Button7_button_up"]
[connection signal="button_up" from="NinePatchRect/Button8" to="NinePatchRect/Label" method="_on_Button8_button_up"]
[connection signal="button_up" from="NinePatchRect/Button9" to="NinePatchRect/Label" method="_on_Button9_button_up"]
[connection signal="button_up" from="NinePatchRect/restart" to="NinePatchRect/Label" method="_on_restart_button_up"]
